# language-model-from-scratch

./: README.md  pyproject.toml
src/: functional.py  model.py  optimizer.py
